------------
v4.0.0alpha6
------------




------------
v4.0.0alpha5
------------

|+

------------
v4.0.0alpha4
------------

|+

------------
v4.0.0alpha3
------------

|+

------------
v4.0.0alpha2
------------

|+

------------
v4.0.0alpha1
------------

[jan] Add verify_forward_addresses() hook.
[jan] Add support for boolean spam headers (Adam James
      <adam.james@transitiv.co.uk>).
[jan] Allow to specify time limits for vacation messages if supported.
[jan] Allow to set vaction with only start or end date, if supported.
[jan] Add support for Sieve date extension to vacation messages (Request
      #12520).
[mjr] Export active vacation messages via the timeObjects API (Request #10885).
[mms] Added a NoSQL (MongoDB) driver for the storage backend.
[mms] Rule code has been separated from the storage backend drivers.
[jan] Use Horde\ManageSieve instead of Net_Sieve.
[mms] Rearrange the default order of filter rules.


-------
v3.2.17
-------


-------
v3.2.16
-------

[jan] Officially support PHP 7.


-------
v3.2.15
-------

[jan] SECURITY: Fix XSS vulnerability in rule search (Andrey Zelenchuk
      <azelenchuk@plesk.com>).


-------
v3.2.14
-------

[jan] Never send autoreplies again when setting zero vacation days in Procmail
      or Maildrop backends (Bug #14549).
[jan] Don't split sieve body tests on commas (Bug #14546).


-------
v3.2.13
-------

[jan] Convert vacation rules in preference backend from Ingo < 2.0.
[jan] Fix some edge cases with Sieve vacation rules with date limits (Bug
      #14486).


-------
v3.2.12
-------

[jan] Fix using ingo-convert-prefs-to-sql for multiple users.
[mjr] Fix incorrect flag usage in Procmail vacation recipe (Bug #14397).
[mjr] Fix escaping mailbox names that contain utf7-imap encodings (Bug #14429).
[jan] Fix creating new spam folders.


-------
v3.2.11
-------

[jan] Update Portuguese translation.
[jan] Update Basque translation.
[jan] Don't ignore 'initial_page' registry setting.


-------
v3.2.10
-------
